[tool.poetry]
name = "pybtracker"
version = "0.2.4"
description = "Simple asyncio-based UDP BitTorrent tracker, with a simple client."
license = "MIT"
authors = ["Mostafa Razavi <mostafa@sepent.com>"]
readme = "README.rst"
homepage = "https://github.com/elektito/pybtracker"
repository = "https://github.com/elektito/pybtracker"
keywords = ["bittorrent", "torrent", "tracker", "asyncio", "udp"]
classifiers = ["Programming Language :: Python :: 3"]

[tool.poetry.scripts]
pybtracker = "pybtracker.server:main"
pybtracker-client = "pybtracker.client:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
asynctest = "0.5.0"
black = "^20.8b1"
isort = "^5.5.2"
pyupgrade = "^2.7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
